--- a/Antonino/Views/Shared/_Layout.cshtml
+++ b/Antonino/Views/Shared/_Layout.cshtml
@@ -17,27 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Santa's NameWarehouse", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Santa's Warehouse", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  @switch (Session["IsAdmin"])
-                  {
-                    case true:
-                          <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                          <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
-                          <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
-                      break;
-                    case false:
-                          <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                          <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
-                          <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
-                      break;
-                    default:
-                          <li>@Html.ActionLink("Login", "Login", "Users")</li>
-                      break;
-                  }
-                    
+                <ul class="nav navbar-nav">                  
+                  <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                  <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
+                  <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
+                  <li>@Html.ActionLink("Login", "Login", "Account")</li>
                 </ul>
             </div>
         </div>
