Login and logout done

--- a/Antonino/Views/Shared/_Layout.cshtml
+++ b/Antonino/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                   <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
                   <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
                   <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                  @Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn btn-primary" })
                 </ul>
             </div>
         </div>
