--- a/Antonino/Views/Account/Login.cshtml
+++ b/Antonino/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
           <label>Password:</label>
-          @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+          @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
         <input type="submit" value="Login" class="btn btn-primary" />
     }
