added screenname to navbar

--- a/Antonino/Views/Shared/_Layout.cshtml
+++ b/Antonino/Views/Shared/_Layout.cshtml
@@ -25,7 +25,12 @@
                   <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
                   <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
                   <li>@Html.ActionLink("Login", "Login", "Account")</li>
-                  @Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn btn-primary" })
+                  @if (Session["ScreenName"] != null)
+                  {
+                      <li>@Html.ActionLink(Session["ScreenName"].ToString(), "Index", "Home")</li>
+                      @Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn btn-primary" })
+                  }
+                  
                 </ul>
             </div>
         </div>
