--- a/Antonino/Views/Account/Login.cshtml
+++ b/Antonino/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <h3>Login</h3>
   </div>
   <div class="panel-body">
-    <p class="lead">Please log in to access the administrtion area:</p>
+    <p class="lead">Please log in to access the administration area:</p>
     @using (Html.BeginForm())
     {
         @Html.ValidationSummary()
