--- a/Antonino/Views/Orders/Details.cshtml
+++ b/Antonino/Views/Orders/Details.cshtml
@@ -5,10 +5,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Order's Details</h2>
 
 <div>
-    <h4>Order</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,8 +33,18 @@
       <dd>
         @Html.DisplayFor(model => model.Status)
       </dd>
+
+      <dt>
+        @Html.DisplayNameFor(model => model.TotalOrderdToys)
+      </dt>
+
+      <dd>
+        @Html.DisplayFor(model => model.TotalOrderdToys)
+      </dd>
     </dl>
 </div>
+<hr />
+<h4>Detailed List</h4>
 <table class="table">
   <thead>
     <tr>
