Added backend control on toys amount

--- a/Antonino/Views/Orders/Details.cshtml
+++ b/Antonino/Views/Orders/Details.cshtml
@@ -58,7 +58,7 @@
     {
         <tr>
           <td>
-            @Html.DisplayFor(model => toy.Quantity)
+            @Html.DisplayFor(model => toy.DesiredQuantity)
           </td>
           <td>
             @Html.DisplayFor(model => toy.Name)
