--- a/Antonino/Views/Shared/_Layout.cshtml
+++ b/Antonino/Views/Shared/_Layout.cshtml
@@ -4,9 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Applicazione ASP.NET</title>
-    @Styles.Render("~/Content/css")
+    <title>@ViewBag.Title - Santa's Warehouse</title>
+    @Styles.Render("~/Content/css")       
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Content/CustomContent/customStyle.css")    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -22,17 +24,19 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">                  
                   <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                  <li>@Html.ActionLink("Chi siamo", "About", "Home")</li>
-                  <li>@Html.ActionLink("Contatti", "Contact", "Home")</li>
-                  <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                  <li>@Html.ActionLink("Who", "About", "Home")</li>
+                  <li>@Html.ActionLink("Contacts", "Contact", "Home")</li>
                   @if (Session["ScreenName"] != null)
                   {
                       <li>@Html.ActionLink("Toys", "Index", "Toys")</li>
                       <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                       <li>@Html.ActionLink(Session["ScreenName"].ToString(), "Index", "Home")</li>
-                      @Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn btn-primary" })
+                      @Html.ActionLink("Sign Out", "Logout", "Account", null, new { @class = "btn-login" })
                   }
-                  
+                  else
+                  {
+                      <li>@Html.ActionLink("Login", "Login", "Account", new { @class = "btn btn-primary" })</li>
+                  }
                 </ul>
             </div>
         </div>
@@ -46,7 +50,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")    
-    @RenderSection("scripts", required: false)    
+    
+    @RenderSection("scripts", required: false)  
 </body>
 </html>
