--- a/Antonino/Views/Home/Contact.cshtml
+++ b/Antonino/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Santa Claus Main Post Office<br />
+    Tähtikuja 1, FI-96930 Napapiiri<br />
+    <abbr title="Phone">Tel:</abbr>
+      020 4523 120
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">ziggy.stardust@santa.com</a><br />
+    <strong>Cookies:</strong> <a href="mailto:Marketing@example.com">santa.claus@santa.com</a>
 </address>
