--- a/Antonino/Content/CustomContent/customStyle.css
+++ b/Antonino/Content/CustomContent/customStyle.css
@@ -41,4 +41,13 @@ body {
 .enough-toys {
   color: #FEECDB; }
 
+.btn-primary {
+  background-color: #9B6244;
+  color: #FEECDB;
+  border-color: #FEECDB; }
+  .btn-primary:hover {
+    color: #FF7A6B;
+    border-color: #FF7A6B;
+    background-color: #47423F; }
+
 /*# sourceMappingURL=customStyle.css.map */
