frotend done (for now)

--- a/Antonino/Views/Orders/Details.cshtml
+++ b/Antonino/Views/Orders/Details.cshtml
@@ -86,7 +86,7 @@
       @Html.ActionLink("Edit", "Edit", new { id = Model.ID }, new { @class = "btn btn-default" })
   }else
 	{
-	    <strong class="out-of-stock">Edit button is disabled because there's not enough articles in stock for one toy ore more.</strong><br /> 
+	    <strong class="out-of-stock">Edit button is disabled because there's not enough articles in stock for one toy or more.</strong><br /> 
       <strong class="out-of-stock">Check the Detailed List for more info.</strong><br />
   }
   @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
