--- a/Antonino/Views/Shared/_Layout.cshtml
+++ b/Antonino/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Santa's Warehouse</title>
+    <link rel="icon" type="image/x-icon" href="@Url.Content("../favicon.ico")" />
     @Styles.Render("~/Content/css")       
     @Scripts.Render("~/bundles/modernizr")    
     @Styles.Render("~/Content/CustomContent/customStyle.css")    
