--- a/Antonino/Views/Home/About.cshtml
+++ b/Antonino/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Except the mean ones. And we don't accept refunds</p>
+<p>Except the bad ones. And we don't accept refunds</p>
