edited edit css

--- a/Antonino/Views/Orders/Edit.cshtml
+++ b/Antonino/Views/Orders/Edit.cshtml
@@ -47,5 +47,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Order Details", "Details", new { id = Model.ID }, new { @class = "btn btn-primary" })
 </div>
