--- a/Antonino/Views/Orders/Details.cshtml
+++ b/Antonino/Views/Orders/Details.cshtml
@@ -45,7 +45,7 @@
 </div>
 <hr />
 <h4><strong>Detailed List</strong></h4>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Desired Quantity</th>
