--- a/Antonino/Views/Orders/Index.cshtml
+++ b/Antonino/Views/Orders/Index.cshtml
@@ -11,7 +11,7 @@
     <h2 style="text-align:center;">Orders</h2>
   </div>
 </div>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Kid</th>
