--- a/Antonino/Views/Toys/Index.cshtml
+++ b/Antonino/Views/Toys/Index.cshtml
@@ -9,7 +9,7 @@
     <h2 style="text-align:center;">Toys</h2>
   </div>
 </div>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
